# py-script-wrapper

./: LICENSE  README.md  pyproject.toml
kmodule/: __init__.py  kargs.py  klog.py  konfig.py
src/kmodule/: __init__.py  kargs.py  klog.py  konfig.py
src/swrapper/: __init__.py  __main__.py  exceptions.py  wargs.py  wconfig.py  wlog.py
